@@ -31,6 +31,7 @@
 - INTERNAL: Don't update navigation table if it's not visible
 - INTERNAL: Statistics refactoring [2875945]
 - INTERNAL: Write repository to disk when closing application only if repository has been modified or refreshed
+- INTERNAL: Write favorites to disk when closing application only if favorites have been modified
 - FIX: Deleting many files from device freezes aTunes gui for some seconds [2855962]
 - FIX: LyricWiki engine returned lyrics with URLs
 - FIX: Opening web browser does not work on Ubuntu
